events being sent through pusher to the client - just need to work out how to display the,

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Your project title</title>
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
   </head>
@@ -9,5 +11,6 @@
 
     </div>
     <script src="/static/bundle.js"></script>
+    <script src="https://js.pusher.com/4.3/pusher.min.js"></script>
   </body>
 </html>
